# illuvutar

./: .gitignore  README.md  pyproject.toml
demo_world/: agents.yaml  constitution.yaml  factions.yaml  history.yaml  meta.yaml  palette.yaml  regions.yaml  tilemap.json
demo_world/.rag/: chroma.sqlite3
docs/superpowers/plans/: 2026-07-05-engine.md  2026-07-05-world-generation.md  (+6 more)
engine/: pyproject.toml
engine/renderer/: index.html
engine/renderer/js/: effect_layer.js  profile_panel.js  renderer.js  sprite_atlas.js  tile_layer.js  ui_layer.js  wrl_parser.js
engine/src/engine/: __main__.py  loader.py  tick.py
engine/src/engine/entities/: components.py  persistence.py  store.py
engine/src/engine/physics/: adjacency.py  collision.py  passability.py
engine/src/engine/server/: app.py
engine/src/engine/systems/: ai_decision.py  environment.py  health.py  input.py  interaction.py  inventory.py  ollama_ai.py  physics_system.py  render_output.py
engine/src/engine/wrl/: __init__.py  parser.py  schema.py  serializer.py
engine/tests/: test_entity_persistence.py  test_entity_store.py  test_loader.py  test_mind.py  test_ollama_ai.py  test_physics.py  test_profile.py  test_server.py  test_systems.py  test_tick.py  test_wrl_parser.py  test_wrl_schema.py  test_wrl_serializer.py
illuvutar/: .gitignore  pyproject.toml
illuvutar/tests/: conftest.py  test_god.py  test_memory.py  test_specialist.py  test_tools.py  test_voronoi.py  test_writer.py
palettes/verdant/: palette_meta.yaml
scripts/: create_demo_world.py  generate_sprites.py
src/illuvutar/: cli.py
studio/: pyproject.toml
studio/src/studio/: __main__.py  app.py  god_session.py  sim.py
studio/tests/: conftest.py  test_god_session.py  test_studio_app.py
studio/web/: forge.js  index.html  studio.css
tests/: test_god.py  test_indexer.py  test_jobs.py  test_llm_client.py  test_populace.py  test_populate_town.py  test_populate_world.py  test_rag.py  test_schema.py  test_specialist.py  test_tools.py  test_tui.py  test_wfc.py
tests/engine/: conftest.py  test_entity_persistence.py  test_entity_store.py  test_loader.py  test_mind.py  test_ollama_ai.py  test_physics.py  test_profile.py  test_server.py  test_systems.py  test_tick.py  test_wrl_parser.py  test_wrl_schema.py  test_wrl_serializer.py
tests/god/: test_god.py  test_indexer.py  test_llm_client.py  test_memory.py  test_populace.py  test_populate_world.py  test_rag.py  test_schema.py  test_specialist.py  test_tools.py  test_voronoi.py  test_wfc.py  test_writer.py
tests/studio/: conftest.py  test_god_session.py  test_studio_app.py
(+71 files in other folders)
