[project]
name = "illuvutar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.3",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "textual>=0.60",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "numpy>=1.26",
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
illuvutar = "illuvutar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
