[project]
name = "illuvutar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "numpy>=1.26",
    "click>=8.1",
    "openai>=1.0",
    "fastapi[standard]>=0.111",
    "uvicorn>=0.30",
    "tomlkit>=0.13",
    "httpx>=0.27",
    "aiofiles>=23.0",
]

[project.scripts]
studio = "illuvutar.studio.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/illuvutar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]
