[project]
name = "engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.111",
    "uvicorn>=0.30",
    "numpy>=1.26",
    "tomlkit>=0.13",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
]

[project.scripts]
illuvutar-engine = "engine.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
