[project]
name = "studio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.111", "uvicorn>=0.30", "illuvutar", "engine"]

[project.scripts]
studio = "studio.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
illuvutar = { path = "..", editable = true }
engine = { path = "../engine", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]
